The database can be viewed and updated.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="name">Name</string>
     <string name="email">Email</string>
     <string name="submit">Submit</string>
+    <string name="view_people">View People</string>
 </resources>
